fix: enterprise card background height on mobile

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -495,6 +495,12 @@ span.fi {
   .text-404 {
     font-size: 14rem;
   }
+
+  .enterprise-box-bg {
+    left: -30%;
+    width: auto;
+    height: 100%;
+  }
 }
 
 @media screen and (max-width: 576px) {
